--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "autoprefixer": "7.2.3",
     "vue-loader": "13.6.0",
     "vue-template-compiler": "2.5.13",
+    "vue-style-loader": "^3.0.3",
     "webpack": "3.10.0",
     "webpack-dev-server": "2.9.7",
     "html-webpack-plugin": "2.30.1",
