--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cross-env NODE_ENV=production webpack --config build/webpack.config.client.js",
+    "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.config.client.js",
+    "build":"npm run clean && npm run build:client",
+    "clean": "rimraf dist",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js"
   },
   "repository": {
@@ -22,29 +24,30 @@
     "vue": "2.5.13"
   },
   "devDependencies": {
-    "babel-loader": "7.1.2",
-    "babel-preset-env": "1.6.1",
-    "babel-helper-vue-jsx-merge-props": "2.0.3",
-    "babel-plugin-transform-vue-jsx": "3.5.0",
-    "babel-plugin-syntax-jsx": "6.18.0",
+    "autoprefixer": "7.2.3",
     "babel-core": "6.26.0",
-    "css-loader": "0.28.7",
+    "babel-helper-vue-jsx-merge-props": "2.0.3",
+    "babel-loader": "7.1.2",
+    "babel-plugin-syntax-jsx": "6.18.0",
+    "babel-plugin-transform-vue-jsx": "3.5.0",
+    "babel-preset-env": "1.6.1",
     "clean-webpack-plugin": "^1.0.0",
     "cross-env": "5.1.3",
+    "css-loader": "0.28.7",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.6",
+    "html-webpack-plugin": "2.30.1",
     "less": "^2.7.3",
     "less-loader": "^4.1.0",
+    "postcss-loader": "2.0.9",
+    "rimraf": "^2.6.3",
     "style-loader": "0.19.1",
     "url-loader": "0.6.2",
-    "postcss-loader": "2.0.9",
-    "autoprefixer": "7.2.3",
     "vue-loader": "13.6.0",
-    "vue-template-compiler": "2.5.13",
     "vue-style-loader": "^3.0.3",
+    "vue-template-compiler": "2.5.13",
     "webpack": "3.10.0",
     "webpack-dev-server": "2.9.7",
-    "html-webpack-plugin": "2.30.1",
     "webpack-merge": "^4.1.1"
   }
 }
