--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "vue-learning",
+  "name": "vue-ssr",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.config.client.js",
-    "build":"npm run clean && npm run build:client",
+    "build": "npm run clean && npm run build:client",
     "clean": "rimraf dist",
+    "lint": "eslint --ext .js --ext .jsx --ext .vue client/",
+    "lint-fix": "eslint --fix --ext .js --ext .jsx --ext .vue client/",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js"
   },
   "repository": {
@@ -27,6 +29,7 @@
     "autoprefixer": "7.2.3",
     "babel-core": "6.26.0",
     "babel-helper-vue-jsx-merge-props": "2.0.3",
+    "babel-eslint": "^8.2.1",
     "babel-loader": "7.1.2",
     "babel-plugin-syntax-jsx": "6.18.0",
     "babel-plugin-transform-vue-jsx": "3.5.0",
@@ -35,6 +38,14 @@
     "cross-env": "5.1.3",
     "css-loader": "0.28.7",
     "extract-text-webpack-plugin": "3.0.2",
+    "eslint": "^4.16.0",
+    "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-html": "^4.0.1",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1",
     "file-loader": "1.1.6",
     "html-webpack-plugin": "2.30.1",
     "less": "^2.7.3",
