--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "homepage": "https://github.com/yangdepp/vue-learning#readme",
   "dependencies": {
-    "vue": "2.5.13"
+    "vue": "2.5.13",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "7.2.3",
