--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-loader": "7.1.2",
     "babel-plugin-syntax-jsx": "6.18.0",
     "babel-plugin-transform-vue-jsx": "3.5.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "1.6.1",
     "clean-webpack-plugin": "^1.0.0",
     "cross-env": "5.1.3",
