--- a/package.json
+++ b/package.json
@@ -31,17 +31,17 @@
   "devDependencies": {
     "autoprefixer": "7.2.3",
     "babel-core": "6.26.0",
-    "babel-helper-vue-jsx-merge-props": "2.0.3",
     "babel-eslint": "^8.2.1",
+    "babel-helper-vue-jsx-merge-props": "2.0.3",
     "babel-loader": "7.1.2",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-syntax-jsx": "6.18.0",
     "babel-plugin-transform-vue-jsx": "3.5.0",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "1.6.1",
+    "babel-preset-stage-1": "^6.24.1",
     "clean-webpack-plugin": "^1.0.0",
     "cross-env": "5.1.3",
     "css-loader": "0.28.7",
-    "extract-text-webpack-plugin": "3.0.2",
     "eslint": "^4.16.0",
     "eslint-config-standard": "^11.0.0-beta.0",
     "eslint-loader": "^1.9.0",
@@ -50,6 +50,7 @@
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
+    "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.6",
     "html-webpack-plugin": "2.30.1",
     "less": "^2.7.3",
