--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "clean": "rimraf dist",
     "lint": "eslint --ext .js --ext .jsx --ext .vue client/",
     "lint-fix": "eslint --fix --ext .js --ext .jsx --ext .vue client/",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js"
+    "dev:client": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js",
+    "dev:server": "cross-env NODE_ENV=development node server/server.js"
   },
   "repository": {
     "type": "git",
@@ -27,10 +28,11 @@
     "ejs": "^2.5.7",
     "vue": "2.5.13",
     "vue-router": "^3.0.1",
-    "vue-server-renderer": "^2.5.13",
+    "vue-server-renderer": "2.5.13",
     "vuex": "^3.1.0",
     "koa": "^2.4.1",
     "koa-router": "^7.4.0",
+    "koa-send": "^4.1.2",
     "axios": "^0.17.1"
   },
   "devDependencies": {
