--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint": "eslint --ext .js --ext .jsx --ext .vue client/",
     "lint-fix": "eslint --fix --ext .js --ext .jsx --ext .vue client/",
     "dev:client": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js",
-    "dev:server": "cross-env NODE_ENV=development node server/server.js"
+    "dev:server": "nodemon server/server.js",
+    "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\""
   },
   "repository": {
     "type": "git",
@@ -47,6 +48,7 @@
     "babel-preset-env": "1.6.1",
     "babel-preset-stage-1": "^6.24.1",
     "clean-webpack-plugin": "^1.0.0",
+    "concurrently": "^4.1.0",
     "cross-env": "5.1.3",
     "css-loader": "0.28.7",
     "eslint": "^4.16.0",
@@ -60,9 +62,10 @@
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.6",
     "html-webpack-plugin": "2.30.1",
-    "memory-fs": "^0.4.1",
     "less": "^2.7.3",
     "less-loader": "^4.1.0",
+    "memory-fs": "^0.4.1",
+    "nodemon": "^1.14.12",
     "postcss-loader": "2.0.9",
     "rimraf": "^2.6.3",
     "style-loader": "0.19.1",
