--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.config.client.js",
-    "build": "npm run clean && npm run build:client",
+    "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.config.server.js",
+    "build": "npm run clean && npm run build:client && npm run build:server",
     "practice": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.practice.js",
-    "clean": "rimraf dist",
+    "clean": "rimraf public && rimraf server-build",
     "lint": "eslint --ext .js --ext .jsx --ext .vue client/",
     "lint-fix": "eslint --fix --ext .js --ext .jsx --ext .vue client/",
     "dev:client": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js",
     "dev:server": "nodemon server/server.js",
-    "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\""
+    "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
+    "start": "cross-env NODE_ENV=production node server/server.js"
   },
   "repository": {
     "type": "git",
@@ -26,15 +28,16 @@
   },
   "homepage": "https://github.com/yangdepp/vue-learning#readme",
   "dependencies": {
+    "axios": "^0.17.1",
     "ejs": "^2.5.7",
-    "vue": "2.5.13",
-    "vue-router": "^3.0.1",
-    "vue-server-renderer": "2.5.13",
-    "vuex": "^3.1.0",
     "koa": "^2.4.1",
     "koa-router": "^7.4.0",
     "koa-send": "^4.1.2",
-    "axios": "^0.17.1"
+    "vue": "2.5.13",
+    "vue-meta": "^1.5.8",
+    "vue-router": "^3.0.1",
+    "vue-server-renderer": "2.5.13",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "autoprefixer": "7.2.3",
